www/sss.css
/**
 * Global styling
 */
a {
	color:#333;
}
a:hover {
	text-decoration:none;
}
body {
	background-color:#F9F9F9;
	margin:0 auto 0 auto;
	width:840px;
}
.box {
	clear:both;
	float:left;
	width:840px;
}
.even,
.head,
.info,
.odd {
	font-family:verdana,sans-serif;
	font-size:12px;
	font-weight:bold;
}
.even {
	color:#666;
	float:left;
	margin:15px 22px 7px 0;
	vertical-align:top;
	width:160px;
}
.grey {
	color:#999;
}
.head {
	background-color:#EEE;
	color:#666;
	float:left;
	margin:15px 22px 7px 0;
	text-align:center;
	width:818px
}
.info {
	color:#666;
	float:left;
	margin:15px 22px 7px 0;
	width:818px;
}
.left {
	float:left;
}
.odd {
	color:#999;
	float:left;
	margin:15px 8px 7px 0;
	text-align:right;
	vertical-align:top;
	width:90px;
}
.right {
	float:right;
	font-style:italic;
	font-weight:normal;
}
/**
 * Global table styling
 */
.act,
.act-day,
.act-year,
.index,
.large,
.medium,
.ppl,
.ppl2,
.ppl-tod,
.small {
	background-color:#EEE;
	border-collapse:separate;
	border-color:#666;
	border-spacing:0;
	border-style:solid;
	border-width:3px 1px 1px 1px;
	color:#333;
	float:left;
	font-family:verdana,sans-serif;
	font-size:10px;
	margin:15px 22px 7px 0;
	table-layout:fixed;
	text-align:left;
}
/**
 * Specific table styling: activity graphs
 */
.act img,
.act-day img,
.act-year img {
	display:block;
	margin-left:auto;
	margin-right:auto;
	width:16px;
}
.act {
	width:818px;
}
.act-day {
	width:240px;
}
.act-year {
	/**
	 * Variable width specified in HTML
	 */
}
.act td,
.act-day td,
.act-year td {
	text-align:center;
}
.act th,
.act-day th,
.act-year th {
	color:#666;
	font-weight:bold;
	padding:1px 0 0 3px;
}
.act tr.bars td,
.act-day tr.bars td,
.act-year tr.bars td {
	height:125px;
	padding:0;
	vertical-align:bottom;
}
.act tr.sub td,
.act-day tr.sub td,
.act-year tr.sub td {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
	padding:1px 0 1px 0;
}
.act tr.sub td.bold,
.act-day tr.sub td.bold,
.act-year tr.sub td.bold {
	color:#666;
}
/**
 * Specific table styling: history index
 */
.index {
	width:818px;
}
.index col.c {
	width:65px;
}
.index col.pos {
	width:36px;
}
.index td {
	padding:1px 0 1px 0;
}
.index td.k,
.index td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.index td.k,
.index td.v {
	padding-right:2px;
	text-align:right;
}
.index td.pos {
	text-align:center;
}
.index th {
	color:#666;
	font-weight:bold;
	padding:1px 3px 1px 3px;
}
/**
 * Specific table styling: most talkative people
 */
.ppl {
	width:818px;
}
.ppl col.c1,
.ppl col.c2 {
	width:80px;
}
.ppl col.c3 {
	width:140px;
}
.ppl col.c4 {
	width:54px;
}
.ppl col.c5 {
	width:100px;
}
.ppl col.c6 {
	width:326px;
}
.ppl col.pos {
	width:36px;
}
.ppl img {
	height:6px;
	padding-bottom:3px;
	vertical-align:bottom;
}
.ppl td {
	padding:1px 0 1px 0;
	vertical-align:top;
}
.ppl td.k1,
.ppl td.k2,
.ppl td.k3,
.ppl td.k4,
.ppl td.k5,
.ppl td.k6,
.ppl td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.ppl td.k1,
.ppl td.v1,
.ppl td.k2,
.ppl td.v2 {
	padding-right:2px;
	text-align:right;
}
.ppl td.k3,
.ppl td.v3,
.ppl td.k5,
.ppl td.v5,
.ppl td.k6,
.ppl td.v6 {
	padding-left:2px;
}
.ppl td.pos {
	text-align:center;
}
.ppl th {
	color:#666;
	font-weight:bold;
	padding:1px 3px 1px 3px;
}
/**
 * Specific table styling: less talkative people
 */
.ppl2 {
	width:818px;
}
.ppl2 col.c1 {
	width:55px;
}
.ppl2 col.c2 {
	width:125px;
}
.ppl2 col.pos {
	width:24px;
}
.ppl2 td {
	padding:1px 0 1px 0;
	vertical-align:top;
}
.ppl2 td.k1,
.ppl2 td.k2,
.ppl2 td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.ppl2 td.k1,
.ppl2 td.v1 {
	padding-right:2px;
	text-align:right;
}
.ppl2 td.k2,
.ppl2 td.v2 {
	padding-left:2px;
}
.ppl2 td.pos {
	text-align:center;
}
.ppl2 th {
	color:#666;
	font-weight:bold;
	padding:1px 3px 1px 3px;
}
/**
 * Specific table styling: people by time of day
 */
.ppl-tod {
	width:818px;
}
.ppl-tod col.c {
	width:197px;
}
.ppl-tod col.pos {
	width:28px;
}
.ppl-tod img {
	height:6px;
	padding:2px 0 3px 0;
}
.ppl-tod td {
	padding:1px 0 1px 0;
	vertical-align:top;
}
.ppl-tod td.k,
.ppl-tod td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.ppl-tod td.k,
.ppl-tod td.v {
	padding-right:2px;
	text-align:right;
}
.ppl-tod td.pos {
	text-align:center;
}
.ppl-tod th {
	color:#666;
	font-weight:bold;
	padding:1px 0 1px 3px;
}
/**
 * Specific table styling: small, medium, large
 */
.small {
	width:258px;
}
.medium {
	width:538px;
}
.large {
	width:818px;
}
.small col.c1,
.medium col.c1,
.medium col.c3,
.large col.c1 {
	width:80px;
}
.small col.c2,
.large col.c2 {
	width:140px;
}
.medium col.c2 {
	width:340px;
}
.large col.c3 {
	width:560px;
}
.small col.pos,
.medium col.pos,
.large col.pos {
	width:36px;
}
.small th,
.medium th,
.large th {
	color:#666;
	font-weight:bold;
	padding:1px 3px 1px 3px;
}
.small td,
.medium td,
.large td {
	padding:1px 0 1px 0;
	vertical-align:top;
}
.small td.k1,
.small td.k2,
.small td.pos,
.medium td.k1,
.medium td.k2,
.medium td.k3,
.medium td.pos,
.large td.k1,
.large td.k2,
.large td.k3,
.large td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.small td.k1,
.small td.v1,
.medium td.k1,
.medium td.v1,
.medium td.k3,
.medium td.v3,
.large td.k1,
.large td.v1 {
	padding-right:2px;
	text-align:right;
}
.small td.k2,
.small td.v2,
.medium td.k2,
.medium td.v2,
.large td.k2,
.large td.v2,
.large td.k3,
.large td.v3,
.large td.v3a {
	padding-left:2px;
}
.small td.pos,
.medium td.pos,
.large td.pos {
	text-align:center;
}
/**
 * Ellipsis, ahead of final CSS3 spec
 */
.ppl td.v6,
.large td.v3 {
	-o-text-overflow:ellipsis;
	overflow:hidden;
	text-overflow:ellipsis;
	white-space:nowrap;
}

